# flyFile

./: README.md  package-lock.json  package.json
src/: App.css  App.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app_state.rs  config.rs  main.rs  protocol.rs  reciever.rs  sender.rs
src/component/: back_button.jsx  radar.jsx  selected_file_tile.jsx
src/model/: app.js  avatar.js
src/pages/: broadcasting_page.jsx  file_selecting_page.jsx  finding_receiver.jsx  finding_receiver_page.jsx  home_page.jsx  initial_page.jsx  transfer_page.jsx  wrapper_page.jsx
